systemd_logind_vtenter is not called by xserver 21.1.2
System info:
- kernel: 5.15.8-arch1-1
- systemd: 249.7-2-arch
- driver: NVIDIA 470.94
Commit 6834f977 made some changes regarding when systemd_logind_vtenter is called by xserver. In my case this results in xserver getting stuck after switching between the VTs or after suspending and resuming the machine.
systemd_logind_vtenter
is never called because:
-
PauseDevice
andResumeDevice
are only sent for the input devices
[ 55.637] (II) systemd-logind: got pause for 13:68
[ 55.637] (II) systemd-logind: got pause for 13:64
[ 55.637] (II) systemd-logind: got pause for 13:70
[ 55.637] (II) systemd-logind: got pause for 13:67
[ 55.637] (II) systemd-logind: got pause for 13:69
[ 55.637] (II) systemd-logind: got pause for 13:71
[ 55.637] (II) systemd-logind: got pause for 13:65
xf86_num_platform_devices == 1
(gdb) p *xf86_platform_devices[0].attribs
$16 = {path = 0x5612bc5958b0 "/dev/dri/card0", syspath = 0x5612bc57b7b0 "/sys/devices/pci0000:00/0000:00:03.0/0000:02:00.0/drm/card0",
busid = 0x5612bc5958d0 "pci:0000:02:00.0", fd = -1, major = 226, minor = 0, driver = 0x5612bc595be0 "nvidia-drm"}
Edited by Tamás Varga